# Intro2DL

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/01_pytorch/: pytorch.ipynb
docs/02_pytorch_xor/: our_model.tar  xor.ipynb
docs/03_activation_fn/: act_fn.ipynb
docs/04_initialization/: init.ipynb
docs/05_optimization/: opt.ipynb
docs/06_loss_fn/: loss.ipynb
docs/07_image_arch/: Inception_ResNet_DenseNet.ipynb  img_arch.ipynb
docs/models/03_activation_fn/: FashionMNIST_elu.tar  FashionMNIST_gelu.config  FashionMNIST_gelu.tar  FashionMNIST_leakyrelu.tar  FashionMNIST_mish.config  FashionMNIST_mish.tar  FashionMNIST_prelu.config  FashionMNIST_prelu.tar  FashionMNIST_relu.tar  FashionMNIST_sigmoid.tar  FashionMNIST_swish.tar  FashionMNIST_tanh.tar
