[tool.poetry]
name = "Intro2DL"
version = "0.1.0"
description = ""
authors = ["Yoshida"]
readme = "README.md"
packages = [{include = "Intro2DL"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.2"
pandas = "^1.4.4"
torch = "^1.12.1"
torchvision = "^0.13.1"
jupyterlab = "^3.4.5"
tensorflow-macos = "^2.9.2"
seaborn = "^0.11.2"
tqdm = "^4.64.1"
ipywidgets = "^8.0.2"
japanize-matplotlib = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
